# blacksheep-prometheus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci_branch.yaml  ci_master.yaml  codeql-analysis.yml
blacksheep_prometheus/: __init__.py  middleware.py  view.py
tests/: test_e2e.py
